<resources>
    <string name="app_name">FoodTracker</string>
    <string name="menu">New Post</string>
    <string name="delete">Deleted Post</string>
    <string name="new_post_dish">Dish</string>
    <string name="new_post_mealTime">Breakfast/Lunch/Dinner/Snack</string>
    <string name="new_post_date">Day</string>
    <string name="save_text">Save</string>
    <string name="saved_post">Saved Text</string>
</resources>
