<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainpage"
    >

    <TextView
        android:id="@+id/saved_post"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="50dp"
        android:textColor="#f1644e"
        android:text="@string/saved_post"
        android:layout_below="@+id/save_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="53dp" />

    <!--<EditText-->
        <!--android:id=-->
        <!--android:textSize="30dp"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_below="@+id/new_post_mealTime"-->
        <!--android:layout_alignParentLeft="true"-->
        <!--android:layout_alignParentStart="true" />-->

    <Spinner
        android:id="@+id/new_post_date"
        android:hint="@string/new_post_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:drawable/btn_dropdown"
        android:spinnerMode="dropdown"
        android:textSize="30dp"
        android:textColor="#ffffff"
        android:layout_below="@+id/new_post_mealTime"
        android:layout_margin="40dp"
        />

    <EditText
        android:id="@+id/new_post_dish"
        android:hint="@string/new_post_dish"
        android:textSize="30dp"
        android:textColor="#f1644e"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Spinner
        android:id="@+id/new_post_mealTime"
        android:hint="@string/new_post_mealTime"
        android:textSize="30dp"
        android:textColor="#ffffff"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_below="@+id/new_post_dish"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_margin="40dp"
        />


    <Button
        android:id="@+id/save_button"
        android:text="@string/save_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onSaveButtonClick"
        android:layout_weight="4.90"
        android:textColor="#f1644e"
        android:layout_marginTop="84dp"
        android:layout_below="@+id/new_post_date"
        android:layout_centerHorizontal="true" />


</RelativeLayout>
